--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-01-04    <tromo@spade.biophysics.rochester.edu>
+
+	* Fixed bug in porcupine that prevented it from running (found by
+	Dejun Lin)
+
 2011-12-22    <alan@membrane.urmc.rochester.edu>
 
 	* Changed AtomicGroup::radius() to accept an optional bool
