--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-01-04    <alan@membrane.urmc.rochester.edu>
+
+    * Fixed a bug in merge-traj that sometimes caused it to not merge
+	all frames (found by Josh Horn)
+	
 2012-01-04    <tromo@spade.biophysics.rochester.edu>
 
 	* Fixed bug in porcupine that prevented it from running (found by
