--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2012-03-08    <alan@membrane.biophysics.rochester.edu>
+
+	* Added potential_profile.py to Tools/.  This tool uses output from
+	density-dist run in "charge" mode to compute the electrostatic potential
+	profile.
+
 2012-03-08    <tromo@spade.biophysics.rochester.edu>
 
 	* Changed density-dist to restore original behavior.  The first
