Fixed moderately severe bug...  When giving a selection to subsetter with a model that has connectivity, the correction of the pruned bond list was applied twice resulting in incorrect bonds.
svn path=/software/LOOS/trunk/; revision=7662

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-03-16    <tromo@spade.biophysics.rochester.edu>
+
+	* Fixed bug in subsetter when using a subset of the model.  The
+	connectivity written out is incorrect.
+
 2012-03-08    <alan@membrane.biophysics.rochester.edu>
 
 	* Added potential_profile.py to Tools/.  This tool uses output from
