Added flags to xy_rdf to handle membrane-spanning selections
svn path=/software/LOOS/trunk/; revision=7728

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2012-03-27 Alan Grossfield <alan@membrane.biophysics.rochester.edu>
+
+	* Added --sel1-spans and --sel2-spans, to handle the case where a
+	selection should be treated as appearing in both leaflets (eg a 
+	transmembrane helix)
+
 2012-03-22  Tod Romo  <tromo@gorgoneion>
 
 	* Removed octavex script (unused by recent versions of LOOS)
