--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-03-29    <tromo@spade.biophysics.rochester.edu>
+
+	* Deprecated dumpmol
+
 2012-03-27 Alan Grossfield <alan@membrane.biophysics.rochester.edu>
 
 	* Added --sel1-spans and --sel2-spans, to handle the case where a
