--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 2012-04-05    <tromo@spade.biophysics.rochester.edu>
 
 	* Changed rotamer to automatically split the selections into residues.
+	* Deprecated svdcolmap (see eigenflucc)
+	* Removed flucc2b
+	* Changed traj2pdb so that it now uses a printf-style output name template
 
 2012-04-02    <alan@membrane.urmc.rochester.edu>
    * Added cross-dist tool to compute distribution of crossing angles
