--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-04-09    <tromo@spade.biophysics.rochester.edu>
+
+	* Changed convert2pdb to use the options framework
+	* Fixed bug in blurrogram.pl where it incorrectly invoked trajinfo
+
 2012-04-05    <tromo@spade.biophysics.rochester.edu>
 
 	* Changed rotamer to automatically split the selections into residues.
