--- a/INSTALL
+++ b/INSTALL
@@ -61,12 +61,12 @@ sudo yum install scons.noarch boost-devel.x86_64 atlas-devel.x86_64
 * PyLOOS *
 
 Fedora 12: Install pcre-devel and download and build the latest swig
-(2.0.4 or later).
+  (2.0.4 or later).
 
 Fedora 13: Yum install pcre-devel and python-devel, then download and install
-swig-2.0.4 (or later).
+  swig-2.0.4 (or later).
 
-Fedora 15: Yum install python-devel and swig
+Fedora 14, 15, 16: Yum install python-devel and swig
 
 
 
@@ -80,8 +80,8 @@ download and install any version of scons more recent than 1.0.
 
 * PyLOOS *
 
-Centos 6(.2): Yum install python-devel and pcre-devel, then download
-and install the latest swig.
+CentOS 5.7, 6.2: Yum install python-devel and pcre-devel, then download
+  and install the latest swig.
 
 			------= Ubuntu =------
 
@@ -117,11 +117,11 @@ libboost-all-devel for a package name.
 
 * PyLOOS *
 
-PyLOOS requires a very recent version of SWIG.  While it may appear
-that the swig 2.0.4 is available through the synaptics package
-manager, it is really 1.3.40 and will not work with PyLOOS.  First
-install the libpcre-dev, then download, build, and install the latest
-version of swig.
+Ubuntu 11.10 & 10.04 LTS: PyLOOS requires a very recent version of
+  SWIG.  While it may appear that the swig 2.0.4 is available through
+  the synaptics package manager, it is really 1.3.40 and will not work
+  with PyLOOS.  First install the libpcre-dev, then download, build,
+  and install the latest version of swig.
 
 
 Ubuntu 8.04 LTS: Install python-dev and follow the instructions above.
@@ -139,6 +139,11 @@ Using the synaptic manager (or apt-get), install the following packages:
       libatlas3gf-base (optional)
 
 
+* PyLOOS *
+
+Debian 5: NOT SUPPORTED
+Debian 6: 
+
 		       ------= openSUSE =------
 
 LOOS has been tested with: 11, 12
@@ -154,6 +159,10 @@ You should get the blas as a dependency for lapack.  You may also have lapack3
 installed by default, however we've found that lapack must also be installed
 in order to build LOOS.
 
+* PYLOOS *
+
+OpenSUSE 12.1: zypper install python-devel swig
+OpenSUSE 11.4: NOT SUPPORTED
 
 
 			-----= MACOS X =-----
@@ -168,6 +177,10 @@ Developer's Connection and download the latest version.  Next, you
 will need to install SCons (http://scons.org) and Boost
 (http://boost.org) by visiting their websites, downloading the
 software, and following their installation instructions.
+
+* PyLOOS *
+
+MacOS is NOT SUPPORTED
 
 
 			 -----= CYGWIN =-----
@@ -189,6 +202,11 @@ default build of LOOS expects.  You will need to set up a new
 custom.py file.  Copy the "custom.py-proto" file in the loos directory
 to "custom.py".  Look for the BOOSTPO and BOOSTREGEX symbols and
 uncomment the appropriate lines.
+
+
+* PyLOOS *
+
+Cygwin is NOT SUPPORTED
 
 
 			-----= FreeBSD =-----
