Another bug found by Dejun...  When alignment and trajectory subsets are different and auto-centering is on (the default), the incorrect centroid is used to translate the system.  Now, the alignment transform is applied to the -entire- model, then the centering is applied.  This will result in a slight performance decrease, but correctness is probably a better goal...
svn path=/software/LOOS/trunk/; revision=7941

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-04-20    <tromo@spade.biophysics.rochester.edu>
+
+	* Fixed bug in aligner when alignment and transformation subsets
+	were not the same and auto-centering was turned on.
+
 2012-04-18    <tromo@spade.biophysics.rochester.edu>
 
 	* Changed utils.hpp, moving random number code to utils_random,
