Added note about changes to AtomicGroup::within()
svn path=/software/LOOS/trunk/; revision=7950

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2012-04-23    <tromo@spade.biophysics.rochester.edu>
+
+	* Fixed bug in AtomicGroup::within() where it was returning atoms
+	in the current group near atoms in the passed group, rather than
+	the other way around (as described in the documentation for
+	within()).  The algorithm has also been rewritten to be
+	substantially faster.
+	* Added support for considering periodicity in AtomicGroup::within()
+
 2012-04-20    <tromo@spade.biophysics.rochester.edu>
 
 	* Fixed bug in aligner when alignment and transformation subsets
